Set select missing filed interface.

--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -6096,6 +6096,10 @@ input.fieldChecked {
   position: relative;
 }
 
+.missingSelect{
+  border-bottom: 1px solid #F44;
+}
+
 span.errorTag {
     position: absolute;
     text-align: center;
