Updated the Menu-ImpactPathway.ftl page with Output sub items (Main-Information, Partners and Next-users).
Updated the global.properties file with Output sub items key-values for
(Main-Information, Partners and Next-users)

Updated the global.css file with Output sub items properties for
(Main-Information, Partners and Next-users).

--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -1806,7 +1806,9 @@ border-radius: 2px;
   color: #5a5a5a;
   padding: 5px 11px;
 }
-
+#secondaryMenu ul li ul li#menu-mainInfo a,#secondaryMenu ul li ul li#menu-nextUsers a,#secondaryMenu ul li ul li#menu-partners a{
+  padding-left: 30px;
+}
 #secondaryMenu a.goBack {
   background: url("../../images/global/sub-menu-goback.png") 0.2em no-repeat;
   background-size: 46%;
