Change colors in the header.

--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -1211,8 +1211,8 @@ header {
   position: absolute;
   right: 1em;
   top: 0;
-  background: #57A7B5;
-  border-bottom: 6px solid #4C8D99;
+  background: #959595;
+  border-bottom: 6px solid #888888;
   height: 100%;
   font-size: 0.9em;
   padding: 6px 20px 17px 20px;
