--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/impactPathway/outputList.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/impactPathway/outputList.css
@@ -11,3 +11,11 @@ table tr{
 .milestone.simpleBox {
   padding-top: 20px;
 }
+
+.partnerSelect {
+    border: 1px dashed #e4e4e4;
+    margin-top: 14px;
+    margin-bottom: 1em;
+    padding: 13px;
+    color: #94988b;
+}
