--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/impactGraphic.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/impactGraphic.css
@@ -1,6 +1,6 @@
 #mini-graphic {
     width: 85%;
-    height: 200px;
+    height: 150px;
     border: 2px solid #d1d1d1;
     margin: auto auto;
     position: absolute;
@@ -22,7 +22,7 @@
     background-color: rgba(51, 51, 51, 0.6);
     /* color: white; */
     text-align: center;
-    line-height: 200px;
+    line-height: 155px;
     display: none;
 }
 
@@ -54,20 +54,54 @@
 
 #changeGraph {
     position: absolute;
-    right: 1%;
+    right: 7%;
     top: 2%;
     z-index: 100;
 }
 
 #buttonDownload {
     position: absolute;
-    right: 1%;
-    top: 90%;
+    right: 2%;
+    top: 2%;
     z-index: 100;
-    background-color: #efefef;
-    color: #292929;
+    text-align: center;
+    width: 3%;
+    background-color: #2BA6CB;
+    color: #fff;
+    border: 0;
+    padding: 3px 5px;
+    font-weight: bold;
+    border-bottom: 3px solid #1E94B8;
+    border-radius: 6px;
 }
 
 #buttonDownload a {
     text-decoration: none;
+}
+
+span.btn {
+    background-color: #2BA6CB;
+    color: #fff;
+    border: 0;
+    padding: 3px 7px;
+    font-weight: bold;
+    border-bottom: 3px solid #1E94B8;
+    border-radius: 2px;
+}
+
+#controls {
+    border: 1px solid #ddd;
+    position: absolute;
+    top: 28%;
+    width: 3%;
+    z-index: 999;
+    right: 0%;
+    background-color: whitesmoke;
+    /* padding: 5px; */
+}
+
+.tool {cursor: pointer;padding: 20%;text-align: center;font-size: 1.6em;width: 100%;padding-top: 40%;}
+
+.tool:hover {
+    color: #2ba6cb;
 }
