--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/impactGraphic.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/impactGraphic.css
@@ -105,3 +105,11 @@ span.btn {
 .tool:hover {
     color: #2ba6cb;
 }
+
+.changeGraphic{
+	position: absolute;
+  right: 7%;
+  top: 2%;
+  z-index: 100;
+  color:white;
+}
