--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -6187,3 +6187,11 @@ span.errorTag {
 #secondaryMenu span.glyphicon {
   color: #d2d2d2;
 }
+
+p.title{
+    color: #058247;
+    text-align: center;
+    font-size: 1.3em;
+    line-height: 0.9em;
+    margin-bottom: 4px;
+}
