--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -4099,6 +4099,15 @@ margin: 0;}
   border-radius: 2px;
   cursor: pointer;
 }
+
+.checkButtonDisable{
+  background-color: #BDBDBD;
+  color: #fff;
+  padding: 5px 12px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
 .checkButton:hover{
   background-color: #749E66;
 }
