--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
@@ -1,21 +1,131 @@
 @CHARSET "UTF-8";
 
-.trainingContentBox{
+.conventionContainer{
 		border-style: solid;
-    border-width: 1px;
-    margin: 2px;
-    height:50px;
+		border-width: 1px;
+		background-color: #f2f2f2;
+		border-radius: 5px;
+		margin: 1%;
+		padding: 1%;
+		width: 100%
 }
 
-.iconContentBox{
-		border-style: solid;
-    border-width: 1px;
-    width: 100px;
-    height:50px;
-    margin: 2px;
+.titleContainer{
+		text-align: center;
+		font-size: 18px;
+		margin: 1%;
 }
 
-.capDevIcon{
-		width: 80px;
-		height: 40px;
+.searchArea{
+		margin: 1%;
+}
+
+.searchIcon{
+		width: 9px;
+		height: 20px;
+}
+
+
+.iconContentBox {
+	border-style: solid;
+    border-width: 1px;
+    border-radius: 7px;
+    border-color: #ccc;
+    width: 28%;
+    background-color: #f2f2f2;
+    display: inline-flex;
+    margin-left: 3%;
+    margin-top: 4%;
+    padding: 2%;
+}
+
+.capDevIcon {
+	width: 94%;
+    height: 67%;
+    margin-left: auto;
+		
+}
+
+.capDevIconConvention{
+	width: 15%;
+    margin-left: auto;
+}
+
+.itemName{
+		margin-bottom: 1%;
+}
+
+.newCapdevForm{
+		border-style: solid;
+		border-width: 1px;
+		border-color: #ccc;
+}
+
+.newCapdevField{
+		margin: 1%;
+}
+
+.approachesListTitle{
+		margin-left:3%;
+		border-bottom: 1px solid #ccc;
+		width: 94%;
+		font-family: Sans-serif;
+		font-weight: 600;
+		
+}
+
+.approachesListContainer{
+		margin:1%;
+		border-left: 1px solid #ccc;
+		border-bottom: 1px solid #ccc;
+}
+
+.objectivesTitle{
+	width: 94%;
+	margin-left:3%;
+	border-bottom: 1px solid #ccc;
+	font-family: Sans-serif;
+	font-weight: 600;
+}
+
+.addObjectiveButton{
+	width: 98%;
+}
+
+.objectivesBox{
+	border-style: solid;
+    border-width: 1px;
+    border-color: #ccc;
+    width: 94%;
+    margin-left: 3%;
+
+}
+
+.participantsTitle{
+	font-family: Sans-serif;
+	font-weight: 600;
+}
+
+
+.participantsBox{
+	width: 94%;
+	margin-left: 3%;
+	margin-top: -5px;
+	padding: 2%;
+	border-style: solid;
+    border-width: 1px;
+    border-color: #ccc;
+}
+
+.paintedDot{
+	border-radius: 50%;
+	background-color: #70ad47;
+	width: 1px;
+
+}
+
+.notPaintedDot{
+	border-radius: 50%;
+	background-color: #cccccc;
+	width: 1px;
 }
