--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/summaries/summaries.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/summaries/summaries.css
@@ -46,6 +46,7 @@
   border-radius: 2px;
   box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
   /* text-align: center; */
+  position: relative;
 }
 
 .summariesSection:last-child {
@@ -255,6 +256,16 @@ vertical-align: middle;}
     text-decoration: none;
     cursor: pointer;
 }
+
+.blockTab{
+	background-color: #999;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    opacity: 0.2;
+}
+
 /* INFO ANIMATION */
 
 span.info-file {
