--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/outcomeProjectsPopup.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/outcomeProjectsPopup.css
@@ -1,4 +1,4 @@
-ul.projectsList {
+ul.projectsList{
   padding: 0;
   margin: 0;
 }
@@ -17,16 +17,29 @@ ul.projectsList > li > p{
   border-radius: 2px;
 }
 
+ul.projectsList > li > ul > li {
+  list-style: none;
+}
+
+
+ul.projectsList > li > ul > li p{
+  background:#f1f1f1;
+  padding: 1px 11px;
+  border-radius: 2px;
+  margin: 5px 0px;
+}
+
 ul.projectsList > li > strong{
   margin-left: 1.5em;
 }
 
 
-ul.projectsList > li ul{ 
+ul.projectsList > li ul{
   margin-bottom: 1em;
+  padding-left: 19px;
 }
 
 .modal-body {
-  overflow: auto;
+  overflow-y: scroll;
   max-height: 500px;
 }
