--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -1030,12 +1030,14 @@ select#partnerSave_activityPartner_partner_type_id {
   margin-bottom: 8px;
   text-align: left;
   border-bottom: 1px solid #DBDBDB;
+  position: relative;
 }
 
 .panel.tertiary .panel-body {
-    padding: 5px 3px 3px 3px; 
+    padding: 5px 3px 3px 3px;
     border-left: 4px solid #E7E6E6;
     margin-left: 1px;
+    position: relative;
 }
 
 .panel.tertiary .panel-body > ul.list > li {
