--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/global/global.css
@@ -6236,3 +6236,12 @@ p.title{
     background: linear-gradient(to right, rgb(32, 144, 90), rgb(44, 150, 100), rgb(50, 153, 104));
     z-index: 999;
 }
+
+.error-info{
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+    padding: 3px 10px;
+    border-radius: 4px;
+    text-align:center;
+}
