--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
@@ -5,9 +5,10 @@
 		border-width: 1px;
 		background-color: #f2f2f2;
 		border-radius: 5px;
-		margin: 1%;
 		padding: 1%;
-		width: 100%
+		width: 100%;
+		height: 63px;
+    	font-size: 13px;
 }
 
 .titleContainer{
@@ -47,12 +48,12 @@
 }
 
 .capDevIconConvention{
-	width: 15%;
+	width: 13%;
     margin-left: auto;
 }
 
 .itemName{
-		margin-bottom: 1%;
+		
 }
 
 .newCapdevForm{
@@ -228,4 +229,11 @@
 	width: 45%;
 	font-family: Sans-serif;
 	font-weight: 600;
+}
+
+
+.capdevinfo{
+	border-radius: 5px;
+	background-color: #d9ead3;
+	height: 50px;
 }
