--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
@@ -76,9 +76,9 @@
 }
 
 .approachesListContainer{
-		margin:1%;
-		border-left: 3px solid #ccc;
-		border-bottom: 1px solid #ccc;
+	margin:1%;
+	border-left: 3px solid #ccc;
+	border-bottom: 1px solid #ccc;
 }
 
 .objectivesTitle{
@@ -237,3 +237,18 @@
 	background-color: #d9ead3;
 	height: 50px;
 }
+
+.list > li{
+	list-style-type: none;
+	margin: 1%;
+	padding: 1px 4px 0px 6px;
+    background-color: #F7F7F7;
+    border: 1px solid #E0E0E0 !important;
+    box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    margin-bottom: 5px;
+    position: relative;
+}
+
+
+
