--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
@@ -252,3 +252,50 @@
 
 
 
+.highlight  {
+    width: 126%;
+    border-radius: 10px;
+    padding: 3%;
+    margin-left: -100px;
+    
+}
+
+.participantMessage{
+	text-align: center;
+	margin: 0 3%;
+}
+
+.warning{
+	background-color: #ffb3b3;
+    padding: 6px;
+    text-align: center;
+    border-bottom: 2px solid #fff;
+    font-style: italic;
+}
+
+.btnPreview{
+	width: 100px;
+	margin:0 auto;
+}
+
+
+.downloadButton{
+  padding: 4px 25px 4px 28px;
+  margin: 5px 0;
+  text-decoration: none;
+  cursor: pointer;
+  color:#fff;
+}
+
+.capdevButtons{
+	background-color: #2e874f;
+	border-bottom: 3px solid #2e874f;
+}
+
+.loader{
+	width: 100px;
+	height: 60px;
+	margin: 5px auto;
+}
+
+
