--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/css/capDev/capacityDevelopment.css
@@ -66,6 +66,8 @@
 		margin: 1%;
 }
 
+
+
 .approachesListTitle{
 		margin-left:3%;
 		border-bottom: 1px solid #ccc;
@@ -103,6 +105,7 @@
 .participantsTitle{
 	font-family: Sans-serif;
 	font-weight: 600;
+	border-bottom: 1px solid #2e874f;
 }
 
 
